<resources>
    <string name="app_name">Pink Floyd Albums</string>
    <string name="album_name">Album Name</string>
    <string name="desc">Description</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="details">&#8230;</string>
    <string name="release">Release</string>
    <string name="song">Quintessential</string>
    <string name="self_name">Ricky Fadel M</string>
    <string name="self_bangkit_mail">a169dsx2750@bangkit.academy</string>
    <string name="self_img">https://rickyslash.my.id/wp-content/uploads/2023/01/sm-rickyslash-1-c-480x480.jpg</string>
    <string-array name="data_name">
        <item>The Piper at the Gates of Dawn</item>
        <item>A Saucerful of Secrets</item>
        <item>More</item>
        <item>Ummagumma</item>
        <item>Atom Heart Mother</item>
        <item>Relics</item>
        <item>Meddle</item>
        <item>Obscured by Clouds</item>
        <item>The Dark Side of the Moon</item>
        <item>Wish You Were Here</item>
        <item>Animals</item>
        <item>The Wall</item>
        <item>The Final Cut</item>
        <item>A Momentary Lapse of Reason</item>
        <item>The Division Bell</item>
        <item>The Endless River</item>
    </string-array>
</resources>